More changes but not fully working yet. Crash a few minutes into startup
Remember to switch back to LoadSettings as that wasn't causing the problem

--- a/plugins/solarcontrol_plugin/solarcontrol_plugin.vcxproj
+++ b/plugins/solarcontrol_plugin/solarcontrol_plugin.vcxproj
@@ -47,7 +47,7 @@
     <TargetName>solarcontrol_plugin</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <TargetName>solarcontrol</TargetName>
+    <TargetName>solar</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
