--- a/plugins/npc_control_plugin/npc.cfg
+++ b/plugins/npc_control_plugin/npc.cfg
@@ -117,3 +117,10 @@ startupnpc = donau, -35595, -100, -27517, 0, 1, 0, 1, 0, 0, 0, 0, 0, Li01
 startupnpc = sinclair, -15938, -57, 5006, 0, 1, 0, 1, 0, 0, 0, 0, 0, Bw01
 startupnpc = quintaine, -22340, -177, 19514, 0, 1, 0, 1, 0, 0, 0, 0, 0, Br05
 startupnpc = vonclaussen, -147, -118, 43045, 0, 1, 0, 1, 0, 0, 0, 0, 0, Rh04
+
+[survival]
+system = li01;
+pos = 50942, -500, -70000
+;format: wave = reward, ship name, quantity (last 2 can be repeated)
+wave = 1000, nomad_fighter, 5
+wave = 2000, nomad_fighter, 5
