--- a/plugins/npc_control_plugin/npc_control_plugin.vcxproj
+++ b/plugins/npc_control_plugin/npc_control_plugin.vcxproj
@@ -55,7 +55,10 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AdminCmds.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Survival.cpp" />
+    <ClCompile Include="Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\project\FLHook.vcxproj">
